<resources>
    <string name="app_name">Hally</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="username">Email or Phone</string>
    <string name="newaccount">Create new Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="re_enter_email">Re-enter Email or Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="register">Register</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="sent_code">Sent Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="note">Please enter your registered email address to get verification mail from Hally team</string>
    <string name="verify">Verify</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="phone_no">Phone no.</string>
    <string name="done">Done</string>
    <string name="thank_you_team_e_bin">Thank you team Hally</string>
    <string name="send_verification">Send Verification</string>
    <string name="aadhaar_no">Aadhaar No.</string>
    <string name="change_personal_details">Change Personal Details</string>
    <string name="default_notification_channel_id">com.saif.wosafe</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="fcm_message">Hi,I am Saif Ali</string>
    <string name="msg_subscribe_failed">Failed to subscribe to hally topic</string>
    <string name="msg_subscribed">Subscribed to hally topic</string>
    <string name="msg_unsubscribe_failed">Failed to unsubscribe to hally topic</string>
    <string name="msg_unsubscribed">Unsubscribed to hally topic</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="json">{\"data\":\"{\"userProfile\":\"%s\",\"notificationType\":\"%s\",\"notificationText\":\"%s\",\"notificationTime\":\"%s\"}\",\"notification":\"{\"title\":\"%s\",\"body\":\"%s\",\"image\":\"%s\"}\"}</string>
</resources>
