<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradent_color">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:id="@+id/Signup_EditText1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_textbox"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:text=""
        android:layout_marginTop="180dp"
        android:layout_marginLeft="25dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/Signup_EditText2"
        android:layout_toRightOf="@+id/Signup_EditText1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/edit_textbox"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="180dp"
        android:text=""
        android:hint="@string/last_name"
        android:inputType="text"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/Signup_EditText3"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_textbox"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="240dp"
        android:text=""
        android:hint="@string/username"
        android:inputType="text" />
    <EditText
        android:id="@+id/Signup_EditText4"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_textbox"
        android:drawableLeft="@android:drawable/ic_secure"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:text=""
        android:layout_marginTop="300dp"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/Signup_EditText5"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_textbox"
        android:drawableLeft="@android:drawable/ic_secure"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="360dp"
        android:text=""
        android:hint="@string/re_enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Signup_Button1"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="420dp"
        android:background="#000149"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/Verify_Textview4"
        android:layout_below="@+id/Signup_Button1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:paddingLeft="30dp"
        android:text="@string/thank_you_team_e_bin"
        android:textSize="20sp"
        android:linksClickable="true"
        />
    <ProgressBar
        android:id="@+id/sinUp_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>