<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradent_color">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:background="@drawable/ic_account_circle"/>

    <ProgressBar
        android:id="@+id/PicProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_textbox"
        android:paddingLeft="10dp"
        android:text=""
        android:drawablePadding="10dp"
        android:layout_marginTop="250dp"
        android:hint="@string/full_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_textbox"
        android:hint="@string/gender"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/address"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_textbox"
        android:hint="@string/address"
        android:layout_below="@+id/gender"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/pincode"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_textbox"
        android:hint="@string/aadhaar_no"
        android:layout_below="@+id/address"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:inputType="number"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_textbox"
        android:hint="@string/phone_no"
        android:layout_below="@+id/pincode"
        android:layout_marginTop="10dp"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:inputType="phone"/>
    <Button
        android:id="@+id/Done"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="#000149"
        android:text="@string/done"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/phone"
        android:textColor="@android:color/white"
        android:textSize="25sp" />
    <TextView
        android:layout_below="@+id/Done"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:paddingLeft="30dp"
        android:text="@string/thank_you_team_e_bin"
        android:textSize="20sp"
        android:linksClickable="true"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>