<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradent_color">

    <ImageView
        android:id="@+id/FP_Textview1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/FP_Textview1"
        android:layout_marginStart="20dp"
        android:paddingStart="20dp"
        android:layout_marginTop="18dp"
        android:paddingEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:text="@string/note"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/FP_EditText1"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_textbox"
        android:drawableStart="@android:drawable/sym_action_email"
        android:paddingStart="10dp"
        android:text=""
        android:layout_below="@+id/note"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:inputType="text" />

    <!--<EditText-->
        <!--android:id="@+id/FP_EditText2"-->
        <!--android:layout_width="320dp"-->
        <!--android:layout_height="45dp"-->
        <!--android:background="@drawable/edit_textbox"-->
        <!--android:drawableLeft="@android:drawable/ic_secure"-->
        <!--android:paddingLeft="15dp"-->
        <!--android:drawablePadding="20dp"-->
        <!--android:text=""-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:hint="@string/old_password"-->
        <!--android:layout_below="@id/FP_EditText1"-->
        <!--android:inputType="textPassword"-->
        <!--/>-->

    <!--<EditText-->
        <!--android:id="@+id/FP_EditText3"-->
        <!--android:layout_width="320dp"-->
        <!--android:layout_height="45dp"-->
        <!--android:background="@drawable/edit_textbox"-->
        <!--android:drawableLeft="@android:drawable/ic_secure"-->
        <!--android:paddingLeft="15dp"-->
        <!--android:drawablePadding="20dp"-->
        <!--android:text=""-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:hint="@string/new_password"-->
        <!--android:layout_below="@id/FP_EditText2"-->
        <!--android:inputType="textPassword"-->
        <!--/>-->

    <!--<EditText-->
        <!--android:id="@+id/FP_EditText4"-->
        <!--android:layout_width="320dp"-->
        <!--android:layout_height="45dp"-->
        <!--android:background="@drawable/edit_textbox"-->
        <!--android:drawableLeft="@android:drawable/ic_secure"-->
        <!--android:paddingLeft="15dp"-->
        <!--android:drawablePadding="20dp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:text=""-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:hint="@string/re_enter_password"-->
        <!--android:layout_below="@id/FP_EditText3"-->
        <!--android:inputType="textPassword"-->
        <!--/>-->

    <Button
        android:id="@+id/FP_Button1"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="#000149"
        android:text="@string/send_verification"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/FP_EditText1"
        android:textColor="@android:color/white"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/Verify_Textview3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:paddingLeft="30dp"
        android:text="@string/thank_you_team_e_bin"
        android:textSize="20dp"
        android:linksClickable="true"
        />
</RelativeLayout>